# kafka-billing-pipeline

./: .gitignore  COST_ANALYSIS.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  init.sql  pyproject.toml  start_pipeline.py  test_connections.py  web_dashboard.py
.github/workflows/: deploy.yml
infrastructure/: deploy.sh  free-tier.tf  main.tf  terraform.tfvars.example  variables.tf
kafka_billing_pipeline/: __init__.py  analytics.py  billing_processor.py  config.py  monitoring.py  producer.py  simple_producer.py  utils.py
kafka_billing_pipeline/tests/: __init__.py  test_producer.py
templates/: dashboard.html
